@@ -1,2 +1,3 @@
 --add-opens java.base/java.lang=ALL-UNNAMED
 --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+--add-modules=java.xml.ws.annotation
